fix(showcase): enable side menu scrolling to bottom on mobile

--- a/projects/angular-showcase/src/app/shared/submenu/submenu.component.scss
+++ b/projects/angular-showcase/src/app/shared/submenu/submenu.component.scss
@@ -11,6 +11,7 @@
   z-index: 998;
   margin-top: 54px;
   padding-top: 1rem;
+  padding-bottom: 10rem;
 }
 
 :host ::ng-deep *:not(li) > ul {
